kubernetes/nw-policies/pod-w-labels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    app: my-app
spec:
  containers:
  - name: nginx
    image: nginx:latest
