kubernetes/nw-policies/pod-wo-labels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unauthorized-pod
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["/bin/sh", "-c", "sleep 3600"]
